--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	        <meta charset="utf-8">
 		    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		    <meta name="viewport" content="width=device-width, initial-scale=1">
+			<meta name="theme-color" content="#E2574C"/>
 		    <title>ePark Admin | Home</title>
 		    <link rel="shortcut icon" type="image/icon" href="img/Logo.ico"/>
 		    <script src="vendor/angular/angular.min.js"></script>
