--- a/public/locadmin/index.html
+++ b/public/locadmin/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/service.js"></script>
     <script type="text/javascript" src="js/directive.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Location Admin</title>
