--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>ePark India &copy; 2017 - Bengal's newest smart parking solution</title>
-	<meta name="description" content="">  
-	<meta name="author" content="">
+	<title>ePark - Bengal's newest smart parking solution for Kolkata</title>
+	<meta name="description" content="Book a parking slot now in Kolkata at the touch of a button">  
+	<meta name="author" content="ePark India">
 
    <!-- mobile specific metas
    ================================================== -->
@@ -27,7 +27,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="icon.ico">
 
 </head>
 
@@ -40,7 +40,7 @@
    	<div class="row">
 
    		<div class="logo">
-	         <a href="index.html">Lhander</a>
+	         <a href="index.html">ePark</a>
 	      </div>
 
 	   	<nav id="main-nav-wrap">
@@ -277,6 +277,8 @@
                <div class="bgrid"> 
 	            	<div class="price-block">
 	                     <img src="images/gov.png" style="margin-top : 3vw;"/>
+	                     <div style="font-family: Segoe UI; font-size: 12px; font-weight: 500;">Department of IT & Electronics</div>
+	                     <div style="font-family: Segoe UI; font-size: 12px; font-weight: 500; margin-top: -16px;">Government of West Bengal</div>
 	            	</div>           	
 			  </div> <!-- /price-block -->
 
@@ -289,6 +291,8 @@
               <div class="bgrid">               
 	                <div class="price-block">
 	                    <img src="images/bengalathon.png" style="margin-top : 7.5vw;"/>
+	                    <div style="font-family: Segoe UI; font-size: 12px; font-weight: 500;">Adjudged among the winners of Bengalathon 2017</div>
+	                    <div style="font-family: Segoe UI; font-size: 12px; font-weight: 500; margin-top: -16px;">India's first State Level Hackathon</div>
 	            	</div>                              
 			  </div> <!-- /price-block --> 
 
@@ -327,7 +331,7 @@
 
                <li>
                	<div class="testimonial-author">
-                    	<img src="images/avatars/avatar-1.jpg" alt="Author image">
+                    	<img src="images/avatars/avatar-2.jpg" alt="Author image">
                     	<div class="author-info">
                     		Dhiman Dey
                     		<span class="position">Software Professional, Owner of TVS Apache RTR Bike</span>
@@ -344,7 +348,7 @@
                <li> 
 
                	<div class="testimonial-author">
-                    	<img src="images/avatars/avatar-2.jpg" alt="Author image">
+                    	<img src="images/avatars/avatar-1.jpg" alt="Author image">
                     	<div class="author-info">
                     		Debraj Ghosh
                     		<span>IT Employee, Owner of a Tata Indica</span>
@@ -391,7 +395,7 @@
 
    				<h3>What is meant by the Beta Phase launch?</h3>
 
-   				<p>The ePark is currently now in a Pilot phase launch in association with the NDITA (Government of West Bengal), WEBEL and the Gitanjali Fee Car Parking Co. Ltd. After this pilot phase, the system will be further tuned and then expanded to other areas as well as per the discussion with the Government Authorities.</p>
+   				<p>The ePark system is currently now in a Pilot phase launch in association with the NDITA (Government of West Bengal), WEBEL and the Gitanjali Fee Car Parking Co. Ltd. After this pilot phase, the system will be further tuned and then expanded to other areas as well as per the discussion with the Government Authorities.</p>
 
    			</div>
 
@@ -458,7 +462,7 @@
    			<ul class="stores">
    				<li class="play-store">
    					<a href="#" class="button round large" title="">
-   						<i class="icon ion-social-android"></i>Download from Google Playstore</a>
+   						<i class="icon ion-social-android"></i>Get it on Google Playstore</a>
    			    </li>
    			</ul>
 
@@ -480,14 +484,15 @@
 	      	<div class="col-four tab-full mob-full footer-info">            
 
 	            <div style="font-size : 30px; color : #FFFFFF; margin-bottom : 10px; font-family : Segoe UI; font-weight : 600;">
-	                ePark India
+	                <img src="images/icon.png" style="width : 8%; margin-right : 1vw;"/>ePark India
 	            </div>
 
 	            <p>
 		        	Block EP , Sector 5, Salt Lake City<br>
             	    Kolkata - 700091, West Bengal, India<br>
-		        	support@eparkindia.com &nbsp; +8017771925
-		        	</p>
+		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;">support@eparkindia.com</span><br/>
+		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;">+8017771925</span>
+		        </p>
 
 		      </div> <!-- /footer-info -->
 
@@ -496,10 +501,10 @@
 	      		<h4>Site Links</h4>
 
 	      		<ul>
-	      			<li><a href="#">NDITA</a></li>
-						<li><a href="#">Bengalathon</a></li>
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
+	      			<li><a href="http://www.ndita.org/egovernance/" target="_blank">About NDITA</a></li>
+						<li><a href="https://bengalathon.wb.gov.in/" target="_blank">Bengalathon</a></li>
+						<li><a href="conditions.html">Terms & Conditions</a></li>
+						<li><a href="conditions.html">Privacy Policy</a></li>
 					</ul>
 
 	      	</div> <!-- /site-links -->  
@@ -509,10 +514,9 @@
 	      		<h4>Social</h4>
 
 	      		<ul>
-	      			<li><a href="#">Twitter</a></li>
-						<li><a href="#">Facebook</a></li>
-						<li><a href="#">Google+</a></li>
-					</ul>
+	      			<li><a href="" target="_blank">Twitter</a></li>
+					<li><a href="https://www.facebook.com/EPark-1659833590727451/?ref=bookmarks" target="_blank">Facebook</a></li>
+				</ul>
 	      	           	
 	      	</div> <!-- /social --> 
 
