--- a/public/conditions.html
+++ b/public/conditions.html
@@ -6,7 +6,8 @@
 
    <!--- basic page needs
    ================================================== -->
-   <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="theme-color" content="#000000"/>
 	<title>ePark - Bengal's newest smart parking solution for Kolkata</title>
 	<meta name="description" content="Book a parking slot now in Kolkata at the touch of a button">  
 	<meta name="author" content="ePark India">
