--- a/public/index.html
+++ b/public/index.html
@@ -462,7 +462,7 @@
 
    			<ul class="stores">
    				<li class="play-store">
-   					<a href="#" class="button round large" title="">
+   					<a href="https://play.google.com/store/apps/details?id=com.herokuapp.epark" target="_blank" class="button round large" title="">
    						<i class="icon ion-social-android"></i>Get it on Google Playstore</a>
    			    </li>
    			</ul>
