Changes in Monitoring

--- a/public/monitorLogs/index.html
+++ b/public/monitorLogs/index.html
@@ -41,8 +41,8 @@
 					        <td style="font-family: Segoe UI; text-align : center;">{{result.start_time}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">{{result.end_time}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">{{result.mins}} mins</td>
-					        <td ng-if="result.status == 'Booked'" style="color : red; font-family: Segoe UI; text-align : center;">{{result.status}}</td>
-					        <td ng-if="result.status == 'completed'" style="color : green; font-family: Segoe UI; text-align : center;">{{result.status}}</td>
+					        <td ng-if="result.status == 'Booked'" style="background-color :red; color : white; font-family: Segoe UI; text-align : center;">{{result.status}}</td>
+					        <td ng-if="result.status == 'completed'" style="background-color :green; color : white; font-family: Segoe UI; text-align : center;">{{result.status}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">₹ {{result.fare}}</td>
 				        </tr>
 				    </tbody>
@@ -74,8 +74,8 @@
 					        <td style="font-family: Segoe UI; text-align : center;">{{result1.start_time}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">{{result1.end_time}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">{{result1.mins}} mins</td>
-					        <td ng-if="result1.status == 'Booked'" style="color : red; font-family: Segoe UI; text-align : center;">{{result1.status}}</td>
-					        <td ng-if="result1.status == 'completed'" style="color : green; font-family: Segoe UI; text-align : center;">{{result1.status}}</td>
+					        <td ng-if="result1.status == 'Booked'" style="background-color : red; color : white; font-family: Segoe UI; text-align : center;">{{result1.status}}</td>
+					        <td ng-if="result1.status == 'completed'" style="background-color : green; color : white; font-family: Segoe UI; text-align : center;">{{result1.status}}</td>
 					        <td style="font-family: Segoe UI; text-align : center;">₹ {{result1.fare}}</td>
 				        </tr>
 				    </tbody>
