Updated Email and FB Link

--- a/public/index.html
+++ b/public/index.html
@@ -489,10 +489,10 @@
 	            </div>
 
 	            <p>
-		        	Block EP , Sector 5, Salt Lake City<br>
+		        	Street 11 DN Block, Sector 5, Salt Lake City<br>
             	    Kolkata - 700091, West Bengal, India<br>
-		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;">support@eparkindia.com</span><br/>
-		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;">+8017771925</span>
+		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;"><a href="mailto:eparkwb@gmail.com">eparkwb@gmail.com</a></span><br/>
+		        	<span style="color: white; font-family: Segoe UI; font-weight: 500;">+91 8017771925, +91 9874332133</span>
 		        </p>
 
 		      </div> <!-- /footer-info -->
@@ -516,7 +516,7 @@
 
 	      		<ul>
 	      			<li><a href="" target="_blank">Twitter</a></li>
-					<li><a href="https://www.facebook.com/EPark-1659833590727451/?ref=bookmarks" target="_blank">Facebook</a></li>
+					<li><a href="https://www.facebook.com/eparkindia" target="_blank">Facebook</a></li>
 				</ul>
 	      	           	
 	      	</div> <!-- /social --> 
